<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">HanselMinutesPlayer</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="pause">Pause</string>
    <string name="timer">Timer: 00:00 / 00:00</string>
    <string name="Downloading">Downloading...</string>
    <string name="ProgressPercentage">Progress: %d%%</string>
    <string name="Loading">Loading...</string>
    <string name="ListViewTitleText" formatted="false">%d. %s</string>
    <string name="TotalLoaded" formatted="false">Total: %d Loaded: %d</string>
    <string name="NoPodCasts">No podcasts, click refresh list to download the list</string>
    <string name="TimerWithTime" formatted="false">Timer: %s / %s</string>
    <string name="NoFileSelected">No file selected.</string>
    <string name="Playing" formatted="false">Playing: %s</string>
    <string name="Pausing" formatted="false">Pausing: %s</string>
    <string name="Stopped" formatted="false">Stopped: %s</string>
    <string name="Selected" formatted="false">Selected: %s</string>
    <string name="RefreshList">Refresh complete list</string>
    <string name="DeleteAll">Delete All</string>
    <string name="totalInDatabase">Total in database: </string>
    <string name="Close">Close</string>
    <string name="totalDownloadedFiles">Number of downloaded files: </string>
    <string name="NoInternetConnection">Can not get feed because no internetconnection can be found.</string>
    <string name="NoFileToDelete">No file to delete</string>
    <string name="DeleteAllTitle">Delete all?</string>
    <string name="DeleteAllMessage">Are you sure you want to delete everything in the cache?</string>
    <string name="DeleteDownloadTitle">Delete download?</string>
    <string name="DeleteDownloadMessage">Are you sure you want to delete the downloaded podcast?</string>
    <string name="DownloadPodCastTitle">Download podcast?</string>
    <string name="DownloadPodcastMessage">Are you sure you want to download the podcast?</string>
    <string name="RefreshListTitle">Refresh list</string>
    <string name="RefreshListMessage">Are you sure you want to refresh the list? This could take a while.</string>
    <string name="RefreshListLatest">Find latest podcasts</string>
    <string name="details">Details</string>
    <string name="search_hint">Search in titles</string>
    <string name="app_label">Search</string>
    <string name="DeleteDownload">Delete download</string>
    <string name="DownloadPodCast">Download podcast</string>
    <string name="ViewInBrowser">View in browser</string>
    <string name="about">HanselminutesPlayer was written by Christiaan Baes. This program is opensource and the code can be found on github.</string>
    <string name="onRoaming">Allow network when roaming</string>
</resources>
