<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical">
    <LinearLayout   android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
    <Button android:id="@+id/refreshListButton"
            android:layout_width="wrap_content"
            android:layout_weight=".3"
            android:layout_height="wrap_content"
            android:text="@string/RefreshList"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"/>
    <Button android:id="@+id/deleteAllButton"
            android:layout_width="wrap_content"
            android:layout_weight=".3"
            android:layout_height="wrap_content"
            android:text="@string/DeleteAll"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"/>
    </LinearLayout>
    <LinearLayout   android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
            android:orientation="vertical">
        <TextView android:id="@+id/totalInDatabase"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                android:text="@string/totalInDatabase"
                android:textAppearance="?android:attr/textAppearanceLarge"
                />
        <TextView android:id="@+id/totalDowloadedFiles"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/totalDownloadedFiles"
                  android:textAppearance="?android:attr/textAppearanceLarge"
                />
        <Button android:id="@+id/closeButton"
                android:layout_width="fill_parent"
                android:layout_weight=".3"
                android:layout_height="wrap_content"
                android:text="@string/Close"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="10dp"/>
    </LinearLayout>
</LinearLayout>
