<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical"
              android:padding="5dp"
              android:id="@+id/searchMainView">
    <LinearLayout android:layout_height="wrap_content"
                  android:layout_width="fill_parent"
                  android:orientation="horizontal">
        <ImageButton  android:src="@drawable/magnify"
                      android:scaleType="fitCenter"
                      android:id="@+id/searchSearchButton"
                      android:layout_width="40dp"
                      android:layout_height="40dp"/>
        <LinearLayout android:layout_height="wrap_content"
                      android:layout_width="fill_parent"
                      android:orientation="vertical">
            <TextView android:layout_height="wrap_content"
                      android:layout_width="fill_parent"
                      android:text="searchtext"
                      android:id="@+id/searchedText"/>
            <TextView android:layout_height="wrap_content"
                      android:layout_width="fill_parent"
                      android:text="foundtext"
                      android:id="@+id/foundText"/>
        </LinearLayout>
    </LinearLayout>
    <ListView android:id="@+id/searchList"
              android:layout_width="fill_parent"
              android:layout_marginBottom="10dp"
              android:layout_height="wrap_content"
              android:layout_weight="1">
    </ListView>
    <LinearLayout android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical">
        <TextView android:id="@+id/searchCurrentPodCast"
                  android:singleLine="true"
                  android:ellipsize="marquee"
                  android:marqueeRepeatLimit ="marquee_forever"
                  android:scrollHorizontally="true"
                  android:focusable="true"
                  android:focusableInTouchMode="true"
                  android:layout_marginLeft="5dp"
                  android:layout_width="wrap_content"
                  android:textAppearance="?android:attr/textAppearanceMedium"
                  android:text="@string/NoFileSelected"
                  android:layout_height="wrap_content"
                  android:textColor="@color/yellow"/>
        <TextView android:id="@+id/searchTimer"
                  android:layout_width="wrap_content"
                  android:textAppearance="?android:attr/textAppearanceMedium"
                  android:text="@string/timer"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="5dp"/>
        <SeekBar android:layout_width="fill_parent"
                 android:id="@+id/searchSeekBar"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="20dp"
                 android:enabled="false"
                 android:layout_marginLeft="5dp"/>
    </LinearLayout>
    <LinearLayout android:id="@+id/linearLayout1"
                  android:layout_marginBottom="10dp"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content">
        <Button android:id="@+id/searchPlayButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:text="@string/play"
                android:enabled="false"/>
        <Button android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight=".25"
                android:id="@+id/searchPauseButton"
                android:text="@string/pause"
                android:enabled="false"/>
        <Button android:id="@+id/searchStopButton"
                android:layout_width="wrap_content"
                android:layout_weight=".25"
                android:layout_height="wrap_content"
                android:text="@string/stop"
                android:enabled="false"/>
        <Button android:id="@+id/searchDetailsButton"
                android:layout_width="wrap_content"
                android:layout_weight=".25"
                android:layout_height="wrap_content"
                android:text="@string/details"
                android:enabled="false"/>
    </LinearLayout>
</LinearLayout>
